# mdsvexrs

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-workspace.yaml  shell.nix
assets/: graphql.sublime-syntax  js-babel.sublime-syntax  log.sublime-syntax  nix.sublime-syntax  svelte.sublime-syntax  tsx.sublime-syntax
highlighter/: hanekawa.json  index.js  package.json
src/: lib.rs  main.rs
test/: simple.md
