[package]
name = "mdsvexrs"
version = "0.1.0"
edition = "2021"

[features]
fancy = ["syntect/default-fancy"]
onig = ["syntect/default-onig"]
default = ["onig", "fancy"]

[dependencies]
markdown = { version = "1.0.0-alpha.21", features = ["serde"]}
itertools = "0.13"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }
syntect = { version = "5.0", default-features = false }
file-exists-macro = "0.1"

[build-dependencies]
syntect = { version = "5.0", default-features = false, features = ["dump-create"] }